--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
   <h1>Betyárbrigantik Szoftvertechnológia</h1>
-  <p>próba</p>
+  <nav>
+  <ul>
+    <li><a href="Projektterv(H1).html">Projekt terv(H1 feladat)</a></li>
+    <li><a href="Munkanaplo290925.html">Munkanaplo 2025.09.29.</a></li>
+  </ul>
+</nav>
 </body>
 </html>
