--- a/Munkanaplo081025.html
+++ b/Munkanaplo081025.html
@@ -135,7 +135,7 @@ tagok:</font></p>
 
 <p style="margin-bottom: 0cm;" align="left"><br></p>
 
-<p style="margin-bottom: 0cm;" align="right" lang="hu-HU"><font size="4">2025.09.29.</font></p>
+<p style="margin-bottom: 0cm;" align="right" lang="hu-HU"><font size="4">2025.10.08.</font></p>
 
 <p style="margin-bottom: 0cm;" align="left"><br></p>
 
@@ -185,6 +185,28 @@ tagok:</font></p>
 			<p style="margin-bottom: 0cm;">GitHub repository</p>
 			<p style="margin-bottom: 0cm;">Projektterv (H1) dokumentum</p>
 			<p>Munkanapló</p>
+		</td>
+	</tr>
+	<tr valign="top">
+		<td width="15%">
+			<p>2025-10-08</p>
+		</td>
+		<td width="13%">
+			<p>1.5</p>
+		</td>
+		<td width="19%">
+			<p style="margin-bottom: 0cm;">Kocsán László</p>
+			<p style="margin-bottom: 0cm;">Ujvari Zsombor Balázs</p>
+			<p style="margin-bottom: 0cm;">Vágási Bence</p>
+			<p style="margin-bottom: 0cm;">Héjjas Gyula</p>
+			<p style="margin-bottom: 0cm;">Pocsai Bálint</p>
+		</td>
+		<td width="33%">
+			<p style="margin-bottom: 0cm;">Csoportos konzultáció</p>
+		</td>
+		<td width="20%">
+			<p style="margin-bottom: 0cm;">Feladatok elosztása</p>
+			<p style="margin-bottom: 0cm;">Előkészületek a tanári konzultációhoz</p>
 		</td>
 	</tr>
 </tbody></table>
