--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <nav>
   <ul>
     <li><a href="Projektterv(H1).html">Projekt terv(H1 feladat)</a></li>
+    <li><a href="Projektterv(H2).html">Projekt terv(H2 feladat)</a></li>
     <li><a href="Munkanaplo081025.html">Munkanaplo 2025.10.08.</a></li>
   </ul>
 </nav>
