Update index, munkanaplo, vizio

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <nav>
   <ul>
     <li><a href="Projektterv(H1).html">Projekt terv(H1 feladat)</a></li>
-    <li><a href="Projektterv(H2).html">Projekt terv(H2 feladat)</a></li>
-    <li><a href="Munkanaplo081025.html">Munkanaplo 2025.10.08.</a></li>
+    <li><a href="Vizio(H2).html">Vízió dokumentum(H2 feladat)</a></li>
+    <li><a href="Munkanaplo101025.html">Munkanaplo 2025.10.10.</a></li>
   </ul>
 </nav>
 </body>
