--- a/Vizio(H2).html
+++ b/Vizio(H2).html
@@ -1074,16 +1074,36 @@ megrendelőnek a termék használatából.</p>
 
 <h2><a name="43"></a>4.3. Feltételezések és függőségek</h2>
 
-<p>Itt kell felsorolni minden olyan körülményt, amelynek meglétét
-feltételezzük a fejlesztés folyamán, és megváltozása hatással van a
-termékre. (Például feltételezzük, hogy az adatbázis mérete nem
-haladja meg a szolgáltató által biztosított lemezterületet.)</p>
+<p>A jelen dokumentumban ismertetett CampusConnect rendszer működésének és bevezetésének alapvető feltételezései és külső függőségei az alábbiak szerint fogalmazhatók meg. A cél egy megbízható, skálázható és könnyen integrálható tanulmányi rendszer kialakítása, amely az intézmény meglévő informatikai környezetébe illeszthető.</p>
 
-<p>Ezeknek a feltételezéseknek a teljesülését folyamatosan figyelni
-kell, és ha megváltoznak, a változás hatását figyelembe kell venni a
-fejlesztés folyamán. (Például ha a szolgáltató által biztosított
-terület mégsem elegendő a teljes adatbázis tárolására, akkor a
-rendszert fel kell készíteni osztott adatbázis használatra.)</p>
+
+<h2>Alapfeltételezések</h2>
+<ul>
+<li><strong>Hálózati elérhetőség:</strong> A rendszer alapfeltétele a folyamatos internetkapcsolat mind a végfelhasználók (hallgatók, oktatók), mind az intézmény szerveroldali komponensei számára.</li>
+<li><strong>Megfelelő kliensek:</strong> A felhasználók modern webböngészőt használnak (Chrome, Firefox, Edge, Safari), illetve szükség esetén mobil eszközökről elérhető reszponzív felületre számítunk.</li>
+<li><strong>Intézményi azonosítási rendszer:</strong> A bejelentkezés és jogosultságkezelés integrált egyetemi azonosítással (LDAP, SSO, OAuth2/OpenID Connect) történik — feltételezzük az intézményi auth szolgáltatás rendelkezésre állását.</li>
+<li><strong>Adatmigrációs lehetőség:</strong> A meglévő hallgatói és tantárgyi adatok exportálhatók és átalakíthatók a CampusConnect által használt adatmodellbe a bevezetés során.</li>
+<li><strong>IT-támogatás és üzemeltetés:</strong> Az intézmény biztosítja a szerverek, hálózati infrastruktúra és üzemeltetési személyzet hozzáférését a telepítéshez, rendszer-felügyelethez és biztonsági mentésekhez.</li>
+</ul>
+
+
+<h2>Külső függőségek</h2>
+<p>A rendszer működése több technológiai komponensre és külső szolgáltatásra támaszkodik. Ezek közül a legfontosabbak:</p>
+<ul>
+<li><strong>Backend környezet:</strong> Java (Spring Boot) vagy Node.js futtatókörnyezet a szerveroldali logika kiszolgálására.</li>
+<li><strong>Adatbázis:</strong> PostgreSQL / MySQL — a hallgatói, tantárgyi és pénzügyi adatok megbízható, tranzakciókezelő tárolása.</li>
+<li><strong>Hitelesítés és jogosultság:</strong> OAuth2 / OpenID Connect kompatibilis SSO szolgáltatás az egyetem részéről.</li>
+<li><strong>Értesítési szolgáltatások:</strong> SMTP vagy külső szolgáltatók (pl. SendGrid, Twilio) email és push értesítésekhez.</li>
+<li><strong>CI/CD és verziókezelés:</strong> GitHub/GitLab alapú forráskezelés és folyamatos integrációs folyamatok (CI/CD) a megbízható telepítésekhez.</li>
+<li><strong>Felhő- vagy helyi infrastruktúra:</strong> Az intézmény döntése alapján a rendszer telepíthető helyben (on-premise) vagy felhőszolgáltatásra (AWS, Azure, GCP). Mindkét esetben szükséges a megfelelő szerverkapacitás és biztonsági konfiguráció.</li>
+</ul>
+
+
+<h2>Üzemeltetés és korlátozások</h2>
+<p>A rendszer rendelkezik automatikus adatmentési mechanizmusokkal és audit naplózással; azonban a visszaállítást és hosszú távú archiválást az intézmény üzemeltetői végzik. A teljesítmény és rendelkezésre állás függ a szerverkapacitástól, az adatforgalomtól és az egyidejű felhasználószámtól; javasolt a rendszer erőforrásait terhelés alapján skálázni.</p>
+
+
+<p class="note"><strong>Megjegyzés:</strong> A bevezetés során előfordulhatnak intézményi sajátosságok (egyedi tanulmányi szabályzatok, speciális kredit-számítási logika), amelyekhez testreszabás szükséges. Ezek a módosítások általában további fejlesztést és egyeztetést igényelnek.</p>
 
 <p><br>
 <br>
@@ -1112,9 +1132,63 @@ program, az üzemeltető személyzet betanítása stb.)</p>
 <h1><a name="5"></a>5. A végtermék jellemzői, biztosított
 szolgáltatások</h1>
 
-<p>A legfontosabb szolgáltatások összefoglalása, a felhasználók
-szemszögéből, esetleg prioritásokkal kiegészítve.</p>
+<p>Az alábbiakban részletesen ismertetjük a CampusConnect végtermék fő jellemzőit és azokat a szolgáltatásokat, amelyeket az intézmény és a felhasználók számára biztosítunk. A leírás célja, hogy világos képet adjon a funkcionalitásról, a felhasználói szerepkörökről és az üzemeltetési lehetőségekről.</p>
 
+
+<h2>Áttekintés</h2>
+<p>A CampusConnect egy Neptun-szerű, webalapú tanulmányi rendszer, amely három fő felhasználói csoportot támogat: hallgatók, oktatók és adminisztrátorok. A rendszer célja az egyetemi ügyintézés digitalizálása, az adminisztráció egyszerűsítése és a tanulmányi folyamatok átláthatóbbá tétele.</p>
+
+
+<div>
+<div>
+<h2>Fő funkciók (hallgatói oldal)</h2>
+<ul>
+<li><strong>Tantárgy- és kurzusfelvétel:</strong> Felhasználóbarát felület a kurzusok keresésére, felvételére és visszavonására.</li>
+<li><strong>Vizsgajelentkezés és vizsgakezelés:</strong> Vizsgákra történő jelentkezés, visszalépés és eredmények megtekintése.</li>
+<li><strong>Tanulmányi előrehaladás követése:</strong> Jegyek, kreditek és összátlag megjelenítése, személyes tanulmányi napló.</li>
+<li><strong>Pénzügyi modul:</strong> Befizetések kezelése, számlák letöltése és egyenleg megtekintése.</li>
+<li><strong>Dokumentumok és igazolások:</strong> Elektronikus leckekönyv, igazolások igénylése és letöltése.</li>
+<li><strong>Értesítések:</strong> Email és push értesítések fontos eseményekről (vizsgaidő, határidők, adminisztratív üzenetek).</li>
+</ul>
+</div>
+
+
+<div>
+<h2>Fő funkciók (oktatói és adminisztrátori oldal)</h2>
+<ul>
+<li><strong>Kurzus- és vizsgakezelés:</strong> Kurzusok létrehozása, módosítása, hallgatói listák kezelése, vizsgaeredmények rögzítése.</li>
+<li><strong>Jegybeírás és értékelés:</strong> Gyors jegybeírási felület és tömeges import lehetőség (CSV, XLSX).</li>
+<li><strong>Jogosultság- és szerepkör-kezelés:</strong> Részletes jogosultsági modell az adminisztrációs folyamatok biztonságáért.</li>
+<li><strong>Statisztikák és riportok:</strong> Teljesítmény, részvétel és hallgatói aktivitás elemzése valós időben.</li>
+<li><strong>Integrációk:</strong> E-learning platformok, könyvtári rendszerek és pénzügyi modulok csatlakoztatása.</li>
+</ul>
+</div>
+</div>
+
+
+<h2>Biztosított szolgáltatások és támogatás</h2>
+<p>A bevezetés részeként a következő szolgáltatásokat biztosítjuk az intézmény számára:</p>
+<ul>
+<li><strong>Adatmigrációs támogatás:</strong> A meglévő hallgatói, oktatói és tantárgyi adatok konvertálása és áthelyezése a CampusConnect rendszerbe.</li>
+<li><strong>Telepítés és konfiguráció:</strong> Rendszer telepítése helyben vagy felhőben, valamint az egyetemi folyamatokhoz igazítása.</li>
+<li><strong>Képzés és dokumentáció:</strong> Adminisztrátoroknak és oktatóknak szervezett oktatások, felhasználói kézikönyv és online súgó.</li>
+<li><strong>Támogatás és karbantartás:</strong> Rendszeres frissítések, hibajavítások és SLA szerinti technikai támogatás.</li>
+</ul>
+
+
+<h2>Műszaki részletek és minőségi jellemzők</h2>
+<p>A CampusConnect fejlesztése során különös figyelmet fordítottunk az alábbi minőségi kritériumokra:</p>
+<ul>
+<li><strong>Biztonság:</strong> HTTPS minden kommunikációhoz, titkosított érzékeny adatok, audit naplók és lehetőség kétlépcsős azonosítás bevezetésére.</li>
+<li><strong>Skálázhatóság:</strong> Mikroszerviz-architektúra és horizontális skálázási lehetőség a nagy terhelés kezelésére.</li>
+<li><strong>Teljesítmény:</strong> Optimalizált adatbázis-lekérdezések, cache réteg és aszinkron háttérfeldolgozás a gyors válaszidőkért.</li>
+<li><strong>Hozzáférhetőség:</strong> Reszponzív, akadálymentes felhasználói felület, amely különböző eszközökön és képernyőméreteken is használható.</li>
+<li><strong>Karbantarthatóság:</strong> Moduláris kódalap, automatizált tesztek és CI/CD pipeline a megbízható fejlesztésért.</li>
+</ul>
+
+
+<h2>Záró megjegyzés</h2>
+<p>A CampusConnect célja, hogy egy modern, megbízható és testreszabható megoldást nyújtson az egyetemi adminisztráció kezelésére. A fenti funkciók és szolgáltatások lefedik a mindennapi tanulmányi folyamatok igényeit, ugyanakkor a rendszer kialakítása lehetővé teszi az intézményi sajátosságokhoz való rugalmas igazítást.</p>
 <p><br>
 <br>
 
