Vizio bevezetes és helye

--- a/Munkanaplo131025.html
+++ b/Munkanaplo131025.html
@@ -135,7 +135,7 @@
 
 <p style="margin-bottom: 0cm;" align="left"><br></p>
 
-<p style="margin-bottom: 0cm;" align="right" lang="hu-HU"><font size="4">2025.10.10.</font></p>
+<p style="margin-bottom: 0cm;" align="right" lang="hu-HU"><font size="4">2025.10.13.</font></p>
 
 <p style="margin-bottom: 0cm;" align="left"><br></p>
 
@@ -229,6 +229,41 @@
 	<td width="20%">
 		<p style="margin-bottom: 0cm;">H2 dokumentum váza feltöltve</p>
 		<p style="margin-bottom: 0cm;">7-es&9-es szakasz hozzáadva</p>
+	</td>
+</tr>
+<tr valign="top">
+	<td width="15%">
+		<p>2025-10-13</p>
+	</td>
+	<td width="13%">
+		<p>1.2</p>
+	</td>
+	<td width="19%">
+		<p style="margin-bottom: 0cm;">Vágási Bence</p>
+	</td>
+	<td width="33%">
+		<p style="margin-bottom: 0cm;">4.3 és 5 szakasz</p>
+	</td>
+	<td width="20%">
+		<p style="margin-bottom: 0cm;"></p>
+		<p style="margin-bottom: 0cm;">4.3 és 5 szakasz hozzáadva</p>
+	</td>
+</tr>
+<tr valign="top">
+	<td width="15%">
+		<p>2025-10-13</p>
+	</td>
+	<td width="13%">
+		<p>1.5</p>
+	</td>
+	<td width="19%">
+		<p style="margin-bottom: 0cm;">Kocsán László</p>
+	</td>
+	<td width="33%">
+		<p style="margin-bottom: 0cm;">1 és 2 szakasz értelmezése, feldolgozása</p>
+	</td>
+	<td width="20%">
+		<p style="margin-bottom: 0cm;">Bevezetés és Az alkalmazás helye szakasz hozzáadva</p>
 	</td>
 </tr>
 </tbody></table>
