--- a/Vizio(H2).html
+++ b/Vizio(H2).html
@@ -142,7 +142,7 @@ tagok:</font></p>
 
 <p style="margin-bottom: 0cm;" align="left"><br></p>
 
-<p style="margin-bottom: 0cm;" align="right" lang="hu-HU"><font size="4">2025.10.10.</font></p>
+<p style="margin-bottom: 0cm;" align="right" lang="hu-HU"><font size="4">2025.10.13.</font></p>
 
 <p style="margin-bottom: 0cm;" align="center"><br></p>
 
@@ -153,144 +153,106 @@ tagok:</font></p>
 </p>
 
 <table border="1" cellpadding="4" cellspacing="3" width="90%">
-
-	<col width="86">
+    <colgroup><col width="86">
 	<col width="57">
 	<col width="314">
 	<col width="152">
-	<thead>
+	</colgroup><thead>
 		<tr valign="top">
-
 			<th width="86">
-
-    <p>Dátumtum</p>
-
+				<p>Dátum</p>
+            </th>
+            <th width="57">
+				<p>Verzió</p>
+            </th>
+			<th width="314">	
+                <p>Leírás</p>
 			</th>
-
-			<th width="57">
-
-    <p>Verzió</p>
-
-			</th>
-
-			<th width="314">
-
-    <p>Leírás</p>
-
-			</th>
-
 			<th width="152">
-
-    <p>Szerző</p>
-
+				<p>Szerző</p>
 			</th>
-
-		</tr>
+        </tr>
 
 	</thead>
 	<tbody>
 
 		<tr valign="top">
-
 			<td sdval="38405" sdnum="1038;0;@" width="86">
-
-      <p align="left">2025. 10. 10.</p>
-
+				<p align="left">2025. 10. 10.</p>
 			</td>
-
 			<td sdval="0" sdnum="1038;0;@" width="57">
-
-      <p>1.0</p>
-
+				<p>1.0</p>
 			</td>
-
 			<td sdval="0" sdnum="1038;0;@" width="314">
-
-      <p>Minőségi elvárások&Kockázat lista</p>
-
+				<p>Minőségi elvárások & Kockázat lista</p>
 			</td>
-
 			<td sdval="0" sdnum="1038;0;@" width="152">
-
-      <p>Héjjas Gyula</p>
-
+				<p>Héjjas Gyula</p>
 			</td>
-
 		</tr>
 
 		<tr valign="top">
-
 			<td sdnum="1038;0;@" width="86">
-
-      <p><br>
-
-				</p>
-
-			</td>
-
+				<p align="left">2025. 10. 13.</p>
+            </td>
 			<td sdnum="1038;0;@" width="57">
-
-      <p><br>
-
-				</p>
-
+				<p>1.1</p>
 			</td>
 
 			<td sdnum="1038;0;@" width="314">
-
-      <p><br>
-
-				</p>
-
-			</td>
-
+				<p>Feltételezések és függőségek & A végtermék jellemzői, biztosított szolgáltatások</p>
+            </td>
 			<td sdnum="1038;0;@" width="152">
-
-      <p><br>
-
-				</p>
-
+				<p>Vágási Bence</p>
 			</td>
-
 		</tr>
 
+        <tr valign="top">
+			<td sdnum="1038;0;@" width="86">
+				<p align="left">2025. 10. 13.</p>
+            </td>
+			<td sdnum="1038;0;@" width="57">
+				<p>1.2</p>
+			</td>
+
+			<td sdnum="1038;0;@" width="314">
+				<p>Bevezetés & Az alkalmazás helye</p>
+            </td>
+			<td sdnum="1038;0;@" width="152">
+				<p>Kocsán László</p>
+			</td>
+		</tr>
 		<tr valign="top">
-
 			<td sdnum="1038;0;@" width="86">
-
-      <p><br>
-
-				</p>
-
-			</td>
-
+				<p align="left"><br></p>
+            </td>
 			<td sdnum="1038;0;@" width="57">
-
-      <p><br>
-
-				</p>
-
+				<p><br></p>
 			</td>
 
 			<td sdnum="1038;0;@" width="314">
-
-      <p><br>
-
-				</p>
-
-			</td>
-
+				<p><br></p>
+            </td>
 			<td sdnum="1038;0;@" width="152">
-
-      <p><br>
-
-				</p>
-
+				<p><br></p>
+			</td>
+		</tr>
+		<tr valign="top">
+			<td sdnum="1038;0;@" width="86">
+				<p align="left"><br></p>
+            </td>
+			<td sdnum="1038;0;@" width="57">
+				<p><br></p>
 			</td>
 
+			<td sdnum="1038;0;@" width="314">
+				<p><br></p>
+            </td>
+			<td sdnum="1038;0;@" width="152">
+				<p><br></p>
+			</td>
 		</tr>
-
-
+	
   </tbody>
 </table>
 
@@ -306,7 +268,7 @@ tagok:</font></p>
 
 <div id="Tartalomjegyzék1" dir="ltr">
 
-<p style="margin-bottom: 0cm;"><a href="#1.+Bevezet%C3%A9s%7Coutline">1.
+<p style="margin-bottom: 0cm;"><a href="#1">1.
 	Bevezetés</a></p>
 
 
@@ -409,22 +371,16 @@ tagok:</font></p>
 
 <h1><a name="1"></a><a name="1. Bevezetés|outline"></a>1. Bevezetés</h1>
 
-<ol>
-
-
-  <p style="margin-bottom: 0cm;">Itt szerepelhet a készítendő
-	alkalmazás legáltalánosabb leírása, fantázianeve, ha van, stb.</p>
-
-</ol>
+<p style="margin-bottom: 0cm;">
+A Janus egy modern, webalapú tanulmányi információs rendszer, amelynek célja a felsőoktatási intézményekben a hallgatók, oktatók és adminisztratív dolgozók mindennapi ügyintézésének megkönnyítése.
+A rendszer a jelenleg használt, sok esetben nehezen kezelhető és elavult felületeket váltaná fel egy felhasználóbarát, átlátható és gyorsan működő megoldással.A Janus lehetőséget biztosít a hallgatóknak a tantárgyfelvételre, vizsgajelentkezésre, tanulmányi előrehaladásuk követésére és pénzügyi ügyeik elintézésére. Az oktatók számára megkönnyíti az osztályzatok rögzítését, a kurzusok kezelését és a hallgatókkal való kommunikációt. Az adminisztrációs munkatársak számára a rendszer egyszerűsíti az adatkezelést.
+</p>
 
 <p style="margin-bottom: 0cm;"><br>
 
 </p>
 
 <h1><a name="2"></a>2. Az alkalmazás helye</h1>
-
-<p>Ennek a fejezetnek a célja az alkalmazás által megoldandó probléma
-elhelyezése a környezetében.</p>
 
 <p><br>
 <br>
@@ -433,8 +389,9 @@ elhelyezése a környezetében.</p>
 
 <h2><a name="21"></a>2.1 üzleti lehetőségek</h2>
 
-<p>Az alkalmazás által ny&uacute;jtott üzleti lehetőségek, illeszkedése a
-szervezet céljaihoz.</p>
+<p>A Janus fejlesztése a felsőoktatási intézmények digitalizációs törekvéseibe illeszkedik. Az oktatás hatékonyságának növelése, az adminisztráció egyszerűsítése és a hallgatói élmény javítása mind olyan cél, amelyet a legtöbb egyetem kiemelten kezel.
+Az új rendszer lehetőséget ad a költségek csökkentésére (pl. kevesebb papírmunka, gyorsabb ügyintézés), valamint a döntéshozatal támogatására azáltal, hogy naprakész és megbízható adatokal szolgáljon az intézmény vezetői számára.A Janus hosszú távon akár több intézmény számára is értékesíthető termék lehet, ami új bevételi forrásokat teremthet a fejlesztő szervezet számára.
+</p>
 
 <p><br>
 <br>
@@ -443,30 +400,25 @@ szervezet céljaihoz.</p>
 
 <h2><a name="22"></a>2.2 A probléma megfogalmazása</h2>
 
-<p>A fejlesztendő alkalmazás által megoldandó probléma megfogalmazása
-a leendő felhasználók szemszögéből.</p>
+<p>A felsőoktatási intézményekben jelenleg használt tanulmányi rendszerek a legtöbb esetben elavultak, nehezen kezelhetők, és nem felelnek meg a mai digitális elvárásoknak. A hallgatók gyakran tapasztalják, hogy az ilyen rendszerek lassan működnek, túlterheltek a beiratkozási és vizsgajelentkezési időszakokban, valamint bonyolult a kezelésük. A felhasználói élmény hiánya miatt a rendszer használata nemcsak frusztráló, hanem sok esetben időigényes is.
+Az oktatók számára a kurzusok és vizsgák kezelése szintén nehézkes, gyakran több különböző felületen kell dolgozniuk, amelyek között nincs megfelelő összeköttetés. Ez megnehezíti az értékelési folyamatokat és a hallgatókkal való kommunikációt. Az adminisztratív dolgozók is hasonló problémákkal szembesülnek: a rendszer bonyolultsága miatt az adatbevitel és az adatkarbantartás sok manuális munkát igényel, ami növeli a hibalehetőség számát.
+A felsőoktatási intézmény vezetőik számára a jelenlegi helyzet további kihívásokat okoz, mivel a rendszerekből kinyerhető adatok gyakran hiányosak, nehezen értelmezhetők vagy nem naprakészek. Ez hátráltatja a döntéshozatalt és a stratégiai megtervezést.
+</p>
 
-<p>Definiálni kell</p>
-
+<h3>A probléma érintettjei</h3>
 <ul>
+	<li><strong>Hallgatók:</strong> gyors, megbízható és felhasználóbarát felületre vágynak, ahol könnyedén elérhetik a tanulmányaikhoz tartozó összes információt, és egyszerűen intézhetik el az ügyeiket.</li>
+    <li><strong>Oktatók:</strong> egyszerű kurzuskezelést, jegybeírást és kommunikációs lehetőségeket szeretnének, hogy több idő tudjanak fordítani az oktatásra.</li>
+    <li><strong>Tanulmányi osztály dolgozói:</strong> átlátható, könnyen kezelhető adminisztrációs rendszerre van szükségük, amely csökkenti a manuális munka mennyiségét és a hibák előfordulását.</li>
+    <li><strong>Intézményvezetés:</strong> pontos, naprakész statisztikai adatokra és jelentésekre támaszkodik, hogy megalapozott döntéseket hozhasson az oktatási és pénzügyi folyamatok terén.</li>
+</ul>
 
-	<li>
-    <p>magát a problémát</p>
-
-	</li>
-  <li>
-    <p>azokat a résztvevőket, akiket a probléma (és megoldása érint)</p>
-
-	</li>
-  <li>
-    <p>milyen befolyással van rájuk a probléma</p>
-
-	</li>
-  <li>
-    <p>melyek lesznek a sikeres megoldás legfontosabb hasznos
-	hatásai</p>
-
-  </li>
+<h3>A sikeres megoldás várható hatásai</h3>
+<ul>
+    <li>Felgyorsulnak az ügyintézések.</li>
+    <li>Csökkeni fog a hibák és panaszok száma.</li>
+    <li>Nő a hallgatók és oktatók elégedettsége.</li>
+    <li>Javul az intézmény digitális megítélése.</li>
 </ul>
 
 <p><br>
@@ -476,41 +428,41 @@ a leendő felhasználók szemszögéből.</p>
 
 <h2><a name="23"></a>2.3 Az elkészült termék helye</h2>
 
-<p>Itt az elkészült terméket kell elhelyezni a környezetében. Ennek
-keretében le kell írni, hogy</p>
+<p>A Janus egy korszerű, webalapú tanulmányi információs rendszer, amelyet kifejezetten felsőoktatási intézmények igényeire fejlesztettek ki.
+Célja, hogy egyetlen, átfogó felületen kezelje mindazokat a folyamatokat, amelyek jelenleg több, egymástól elkülönülő rendszerben manuálisan zajlanak. A Janus integrálja a tanulmányi, pénzügyi és adminisztratív folyamatokat, ezáltal egy központosított, hatékony működést biztosít az intézmény számára.
+A rendszer alapvetően az oktatás és az adminisztráció közötti kapcsolatot hivatott erősíteni, miközben megkönnyíti a felhasználók mindennapi feladatait. A Janus fejlesztésekor kiemelt szempont volt az egyszerű használat, a megbízhatóság és a modern, letisztult felhasználói felület.
+</p>
+
+<h3>Felhasználók:</h3>
 
 <ul>
-
-	<li>
-    <p style="">kinek készült (melyik / milyen
-	szervezetnek)</p>
-
-	</li>
-  <li>
-    <p style="">ki fogja használni</p>
-
-	</li>
-  <li>
-    <p style="">milyen alkalmazás kategóriába
-	tartozik (pl. fejlesztőeszköz, vállalati információs rendszer, stb.)</p>
-
-	</li>
-  <li>
-    <p>mi az alapvető haszna</p>
-
-	</li>
-  <li>
-    <p>milyen alternatívák lehetnek a fejlesztésen kívül (meglevő
-	más rendszer, másféle megoldás, ezek előnyei, hátrányai)</p>
-
-	</li>
-  <li>
-    <p>miben különbözik alapvetően az elkészült termék az
-	alternatíváktól</p>
-
-  </li>
+	<li><strong>Hallgatók:</strong> tanulmányi ügyeiket intézik, tantárgyakat vesznek fel, vizsgákra jelentkeznek, követik tanulmányi előrehaladásukat és pénzügyi státuszukat.</li>
+    <li><strong>Oktatók:</strong> kurzusokat hoznak létre, kezelik a hallgatói listákat, beírják az érdemjegyeket, és kommunikálnak a hallgatókkal.</li>
+    <li><strong>Tanulmányi osztály dolgozói:</strong> adatokat tartanak karban, kezelik a beiratkozási és vizsgáztatási folyamatokat, valamint statisztikákat készítenek.</li>
+    <li><strong>Intézményvezetés:</strong> hozzáférnek a rendszer által generált összesített adatokhoz, kimutatásokhoz és jelentésekhez, amelyek segítik őket a stratégiai döntéshozatalban.</li>
 </ul>
 
+<h3>Alapvető haszna</h3>
+
+A Janus legfőbb előnye, hogy minden tanulmányi és adminisztratív tevékenység egy központi, online felületen végezhető el.
+Ez egyrészt növeli a hatékonyságot, másrészt csökkenti az adatvesztések és a hibás adminisztrációk esélyét.
+A rendszer felhasználóbarát kialakítása lehetővé teszi, hogy a hallgatók és oktatók bonyolult informatikai ismeretek nélkül is könnyedén eligazodjanak benne.
+
+<h3>Alternatívák</h3>
+
+A piacon jelenleg is létezik hasonló rendszer, mint például a Neptun.
+Ennek előnye, hogy régóta használatban van, ezért a legtöbb felhasználó ismeri a működését, és az intézményekben kialakult az ehhez szükséges infrastruktúra.
+Ugyanakkor hátránya, hogy elavult technológiákra épül, nehezen fejleszthető, és a felhasználói élmény tekintetében már nem felel meg a mai elvárásoknak. Gyakori panasz rá a lassú működés, a zsúfolt felület és a túlterheltség a kritikus időszakokban.
+
+<h3>A Janus fő különbségei és előnyei:</h3>
+
+<ul>
+	<li><strong>Modern, reszponzív felület,</strong> amely asztali gépeken és mobil eszközökön is egyformán jól használható.</li>
+	<li><strong>Gyors működés,</strong> amely minimalizálná a várakozási időt a regisztrációs és a vizsgajelentkezési időszakokban.</li>
+	<li><strong>Könnyen bővíthető és testre szabható felépítés,</strong> így az intézmények saját igényeik szerint alakíthatják.</li>
+	<li><strong>Felhasználóbarát, letisztult kezelőfelület,</strong> amely segíti a gyors tanulást és, hogy hibamentes használjuk.</li>
+	<li><strong>Integrált adatrendszer,</strong> amely lehetővé teszi a különböző intézmények közötti információáramlást.</li>
+</ul>
 <p><br>
 <br>
 
