--- a/Munkanaplo131025.html
+++ b/Munkanaplo131025.html
@@ -149,124 +149,143 @@
 		<col width="48">
 		<col width="86">
 		<col width="51">
-	</colgroup><tbody><tr valign="top">
-	<td width="15%">
-		<p>Kezdet</p>
-	</td>
-	<td width="13%">
-		<p>Időtartam (óra)</p>
-	</td>
-	<td width="19%">
-		<p>Résztvevők</p>
-	</td>
-	<td width="33%">
-		<p>Tevékenység</p>
-	</td>
-	<td width="20%">
-		<p>Eredmény</p>
-	</td>
-</tr>
-<tr valign="top">
-	<td width="15%">
-		<p>2025-09-29</p>
-	</td>
-	<td width="13%">
-		<p>2</p>
-	</td>
-	<td width="19%">
-		<p style="margin-bottom: 0cm;">Kocsán László</p>
-	</td>
-	<td width="33%">
-		<p style="margin-bottom: 0cm;">GitHub repository létrehozása</p>
-		<p style="margin-bottom: 0cm;">Projektterv (H1) struktúrájának létrehozása</p>
-		<p>Munkanapló létrehozása</p>
-	</td>
-	<td width="20%">
-		<p style="margin-bottom: 0cm;">GitHub repository</p>
-		<p style="margin-bottom: 0cm;">Projektterv (H1) dokumentum</p>
-		<p>Munkanapló</p>
-	</td>
-</tr>
-<tr valign="top">
-	<td width="15%">
-		<p>2025-10-08</p>
-	</td>
-	<td width="13%">
-		<p>1.5</p>
-	</td>
-	<td width="19%">
-		<p style="margin-bottom: 0cm;">Kocsán László</p>
-		<p style="margin-bottom: 0cm;">Ujvari Zsombor Balázs</p>
-		<p style="margin-bottom: 0cm;">Vágási Bence</p>
-		<p style="margin-bottom: 0cm;">Héjjas Gyula</p>
-		<p style="margin-bottom: 0cm;">Pocsai Bálint</p>
-	</td>
-	<td width="33%">
-		<p style="margin-bottom: 0cm;">Csoportos konzultáció</p>
-	</td>
-	<td width="20%">
-		<p style="margin-bottom: 0cm;">Feladatok elosztása</p>
-		<p style="margin-bottom: 0cm;">Előkészületek a tanári konzultációhoz</p>
-	</td>
-</tr>
-<tr valign="top">
-	<td width="15%">
-		<p>2025-10-10</p>
-	</td>
-	<td width="13%">
-		<p>0.7</p>
-	</td>
-	<td width="19%">
-		<p style="margin-bottom: 0cm;">Kocsán László</p>
-		<p style="margin-bottom: 0cm;">Ujvari Zsombor Balázs</p>
-		<p style="margin-bottom: 0cm;">Vágási Bence</p>
-		<p style="margin-bottom: 0cm;">Héjjas Gyula</p>
-		<p style="margin-bottom: 0cm;">Pocsai Bálint</p>
-	</td>
-	<td width="33%">
-		<p style="margin-bottom: 0cm;">H2 dokumentum</p>
-	</td>
-	<td width="20%">
-		<p style="margin-bottom: 0cm;">H2 dokumentum váza feltöltve</p>
-		<p style="margin-bottom: 0cm;">7-es&9-es szakasz hozzáadva</p>
-	</td>
-</tr>
-<tr valign="top">
-	<td width="15%">
-		<p>2025-10-13</p>
-	</td>
-	<td width="13%">
-		<p>1.2</p>
-	</td>
-	<td width="19%">
-		<p style="margin-bottom: 0cm;">Vágási Bence</p>
-	</td>
-	<td width="33%">
-		<p style="margin-bottom: 0cm;">4.3 és 5 szakasz</p>
-	</td>
-	<td width="20%">
-		<p style="margin-bottom: 0cm;"></p>
-		<p style="margin-bottom: 0cm;">4.3 és 5 szakasz hozzáadva</p>
-	</td>
-</tr>
-<tr valign="top">
-	<td width="15%">
-		<p>2025-10-13</p>
-	</td>
-	<td width="13%">
-		<p>1.5</p>
-	</td>
-	<td width="19%">
-		<p style="margin-bottom: 0cm;">Kocsán László</p>
-	</td>
-	<td width="33%">
-		<p style="margin-bottom: 0cm;">1 és 2 szakasz értelmezése, feldolgozása</p>
-	</td>
-	<td width="20%">
-		<p style="margin-bottom: 0cm;">Bevezetés és Az alkalmazás helye szakasz hozzáadva</p>
-	</td>
-</tr>
+	</colgroup><tbody>
+	<tr valign="top">
+		<td width="15%">
+			<p>Kezdet</p>
+		</td>
+		<td width="13%">
+			<p>Időtartam (óra)</p>
+		</td>
+		<td width="19%">
+			<p>Résztvevők</p>
+		</td>
+		<td width="33%">
+			<p>Tevékenység</p>
+		</td>
+		<td width="20%">
+			<p>Eredmény</p>
+		</td>
+	</tr>
+	<tr valign="top">
+		<td width="15%">
+			<p>2025-09-29</p>
+		</td>
+		<td width="13%">
+			<p>2</p>
+		</td>
+		<td width="19%">
+			<p style="margin-bottom: 0cm;">Kocsán László</p>
+		</td>
+		<td width="33%">
+			<p style="margin-bottom: 0cm;">GitHub repository létrehozása</p>
+			<p style="margin-bottom: 0cm;">Projektterv (H1) struktúrájának létrehozása</p>
+			<p>Munkanapló létrehozása</p>
+		</td>
+		<td width="20%">
+			<p style="margin-bottom: 0cm;">GitHub repository</p>
+			<p style="margin-bottom: 0cm;">Projektterv (H1) dokumentum</p>
+			<p>Munkanapló</p>
+		</td>
+	</tr>
+	<tr valign="top">
+		<td width="15%">
+			<p>2025-10-08</p>
+		</td>
+		<td width="13%">
+			<p>1.5</p>
+		</td>
+		<td width="19%">
+			<p style="margin-bottom: 0cm;">Kocsán László</p>
+			<p style="margin-bottom: 0cm;">Ujvari Zsombor Balázs</p>
+			<p style="margin-bottom: 0cm;">Vágási Bence</p>
+			<p style="margin-bottom: 0cm;">Héjjas Gyula</p>
+			<p style="margin-bottom: 0cm;">Pocsai Bálint</p>
+		</td>
+		<td width="33%">
+			<p style="margin-bottom: 0cm;">Csoportos konzultáció</p>
+		</td>
+		<td width="20%">
+			<p style="margin-bottom: 0cm;">Feladatok elosztása</p>
+			<p style="margin-bottom: 0cm;">Előkészületek a tanári konzultációhoz</p>
+		</td>
+	</tr>
+	<tr valign="top">
+		<td width="15%">
+			<p>2025-10-10</p>
+		</td>
+		<td width="13%">
+			<p>0.7</p>
+		</td>
+		<td width="19%">
+			<p style="margin-bottom: 0cm;">Kocsán László</p>
+			<p style="margin-bottom: 0cm;">Ujvari Zsombor Balázs</p>
+			<p style="margin-bottom: 0cm;">Vágási Bence</p>
+			<p style="margin-bottom: 0cm;">Héjjas Gyula</p>
+			<p style="margin-bottom: 0cm;">Pocsai Bálint</p>
+		</td>
+		<td width="33%">
+			<p style="margin-bottom: 0cm;">H2 dokumentum</p>
+		</td>
+		<td width="20%">
+			<p style="margin-bottom: 0cm;">H2 dokumentum váza feltöltve</p>
+			<p style="margin-bottom: 0cm;">7-es&9-es szakasz hozzáadva</p>
+		</td>
+	</tr>
+	<tr valign="top">
+		<td width="15%">
+			<p>2025-10-13</p>
+		</td>
+		<td width="13%">
+			<p>1.2</p>
+		</td>
+		<td width="19%">
+			<p style="margin-bottom: 0cm;">Vágási Bence</p>
+		</td>
+		<td width="33%">
+			<p style="margin-bottom: 0cm;">4.3 és 5 szakasz</p>
+		</td>
+		<td width="20%">
+			<p style="margin-bottom: 0cm;"></p>
+			<p style="margin-bottom: 0cm;">4.3 és 5 szakasz hozzáadva</p>
+		</td>
+	</tr>
+	<tr valign="top">
+		<td width="15%">
+			<p>2025-10-13</p>
+		</td>
+		<td width="13%">
+			<p>1.5</p>
+		</td>
+		<td width="19%">
+			<p style="margin-bottom: 0cm;">Kocsán László</p>
+		</td>
+		<td width="33%">
+			<p style="margin-bottom: 0cm;">1 és 2 szakasz értelmezése, feldolgozása</p>
+		</td>
+		<td width="20%">
+			<p style="margin-bottom: 0cm;">Bevezetés és Az alkalmazás helye szakasz hozzáadva</p>
+		</td>
+	</tr>
+	<tr valign="top">
+		<td width="15%">
+			<p>2025-10-14</p>
+		</td>
+		<td width="13%">
+			<p>1</p>
+		</td>
+		<td width="19%">
+			<p style="margin-bottom: 0cm;">Ujvári Zsombor</p>
+		</td>
+		<td width="33%">
+			<p style="margin-bottom: 0cm;">3.3-mas és 4.2-es pontok kidolgozása és kódolása.</p>
+		</td>
+		<td width="20%">
+			<p style="margin-bottom: 0cm;">Felhasználói környezet és A termék használatának előnyei.</p>
+		</td>
+	</tr>
 </tbody></table>
+
 
 
 </body></html>
