--- a/Vizio(H2).html
+++ b/Vizio(H2).html
@@ -224,17 +224,17 @@ tagok:</font></p>
 		</tr>
 		<tr valign="top">
 			<td sdnum="1038;0;@" width="86">
-				<p align="left"><br></p>
+				<p align="left">2025. 10. 14.</p>
             </td>
 			<td sdnum="1038;0;@" width="57">
-				<p><br></p>
+				<p>1.3</p>
 			</td>
 
 			<td sdnum="1038;0;@" width="314">
-				<p><br></p>
+				<p>Felhasználói környezet & A temék használatának előnyei</p>
             </td>
 			<td sdnum="1038;0;@" width="152">
-				<p><br></p>
+				<p>Ujvári Zsombor</p>
 			</td>
 		</tr>
 		<tr valign="top">
@@ -783,41 +783,23 @@ munkafolyamatában.</p>
 
 <h2><a name="33"></a>3.3 Felhasználói környezet</h2>
 
-<p>Itt kell leírni mindent, ami a fejlesztés ezen fázisában már
-tudható a végtermék használatának körülményeiről. Ide tartozhatnak
-például ilyen információk:</p>
+<p>
+	Az alkalmazás célfelhasználói egyetemista diákokok és tanárok.</p>
 
 <ul>
 
 	<li>
-    <p>Milyen platformon fog futni az átadott alkalmazás, és
-	várhatóan változni fog-e?</p>
+		<p>Minden olyan okos eszközről elérhető lesz, amiről internetet tudnak használni.Legmegfelelő operáciosrendszer biztos hog nem IOS</p>
 
 	</li>
   <li>
-    <p>Hány felhasználó fogja használni egy időben átlagosan, és
-	hány felhasználó várható maximálisan?</p>
+	  <p>Töb nyelvűség későbbi frissítésekben fog majd jönni, ezt meg leet tárgyalni, hogyaz 1.0-ás kiadássa milyen nyelven jöjjön.</p>
 
 	</li>
   <li>
-    <p>Van-e valami várható trendje a felhasználószámnak?</p>
+	  <p>Külön telefora és asztal gépre less kinézete.</p>
 
 	</li>
-  <li>
-    <p>Mennyi ideig fogja használni a rendszert egy felhasználó, és
-	ez mennyire változó?</p>
-
-	</li>
-  <li>
-    <p>Milyen különleges körülményekkel kell számolni (egyedi
-	hardware eszközök, mobil kliensek stb.)?</p>
-
-	</li>
-  <li>
-    <p>Milyen más alkalmazásokkal kell várhatóan integrálni a
-	terméket?</p>
-
-  </li>
 </ul>
 
 <p><br>
@@ -872,11 +854,24 @@ nagyobb rendszerben, és a kapcsolódási pontjait, formáit.</p>
 
 <h2><a name="42"></a>4.2. A termék használatának előnyei</h2>
 
-<p>Itt foglaljuk össze, hogy milyen előnyei származnak a
-megrendelőnek a termék használatából.</p>
+<p>
+	A eréket egy olnine iskiolai haladás naplónak sok-sok más plusz funkciókkal kell elképzelni.</p>
 
 <p>Célszerű lehet például egy alábbi táblázat kitöltése:</p>
-
+<p>
+	Az elönyi diákoknak és tanároknak:
+</p>
+	<ul>
+		<li>
+			olnile elérhetőség
+		</li>
+		<li>átláthatóság</li>
+		<li>egyszerűen kehelhetőség</li>
+	</ul>
+<p>Az előnyei az alkalmazás fenntartóinak:</p>
+	<ul>
+		<li>mint sokan ismerik a "neptun"-t, hozzáképest csak jobb</li>
+	</ul>
 <p><br>
 <br>
 
