--- a/Munkanaplo141025.html
+++ b/Munkanaplo141025.html
@@ -135,7 +135,7 @@
 
 <p style="margin-bottom: 0cm;" align="left"><br></p>
 
-<p style="margin-bottom: 0cm;" align="right" lang="hu-HU"><font size="4">2025.10.13.</font></p>
+<p style="margin-bottom: 0cm;" align="right" lang="hu-HU"><font size="4">2025.10.14.</font></p>
 
 <p style="margin-bottom: 0cm;" align="left"><br></p>
 
@@ -282,6 +282,23 @@
 		</td>
 		<td width="20%">
 			<p style="margin-bottom: 0cm;">Felhasználói környezet és A termék használatának előnyei.</p>
+		</td>
+	</tr>
+	<tr valign="top">
+		<td width="15%">
+			<p>2025-10-14</p>
+		</td>
+		<td width="13%">
+			<p>1</p>
+		</td>
+		<td width="19%">
+			<p style="margin-bottom: 0cm;">Pocsai Bálint</p>
+		</td>
+		<td width="33%">
+			<p style="margin-bottom: 0cm;">10. pont kidolgozása.</p>
+		</td>
+		<td width="20%">
+			<p style="margin-bottom: 0cm;">Szótár hozzáadása</p>
 		</td>
 	</tr>
 </tbody></table>
