--- a/Vizio(H2).html
+++ b/Vizio(H2).html
@@ -239,6 +239,36 @@ tagok:</font></p>
 		</tr>
 		<tr valign="top">
 			<td sdnum="1038;0;@" width="86">
+				<p align="left">2025. 10. 14.</p>
+            </td>
+			<td sdnum="1038;0;@" width="57">
+				<p>1.4</p>
+			</td>
+
+			<td sdnum="1038;0;@" width="314">
+				<p>Szótár</p>
+            </td>
+			<td sdnum="1038;0;@" width="152">
+				<p>Pocsai Bálint</p>
+			</td>
+		</tr>
+		<tr valign="top">
+			<td sdnum="1038;0;@" width="86">
+				<p align="left"><br></p>
+            </td>
+			<td sdnum="1038;0;@" width="57">
+				<p><br></p>
+			</td>
+
+			<td sdnum="1038;0;@" width="314">
+				<p><br></p>
+            </td>
+			<td sdnum="1038;0;@" width="152">
+				<p><br></p>
+			</td>
+		</tr>
+		<tr valign="top">
+			<td sdnum="1038;0;@" width="86">
 				<p align="left"><br></p>
             </td>
 			<td sdnum="1038;0;@" width="57">
