--- a/Vizio(H2).html
+++ b/Vizio(H2).html
@@ -1051,7 +1051,7 @@ nagyobb rendszerben, és a kapcsolódási pontjait, formáit.</p>
 
 <h2><a name="43"></a>4.3. Feltételezések és függőségek</h2>
 
-<p>A jelen dokumentumban ismertetett CampusConnect rendszer működésének és bevezetésének alapvető feltételezései és külső függőségei az alábbiak szerint fogalmazhatók meg. A cél egy megbízható, skálázható és könnyen integrálható tanulmányi rendszer kialakítása, amely az intézmény meglévő informatikai környezetébe illeszthető.</p>
+<p>A jelen dokumentumban ismertetett Janus rendszer működésének és bevezetésének alapvető feltételezései és külső függőségei az alábbiak szerint fogalmazhatók meg. A cél egy megbízható, skálázható és könnyen integrálható tanulmányi rendszer kialakítása, amely az intézmény meglévő informatikai környezetébe illeszthető.</p>
 
 
 <h2>Alapfeltételezések</h2>
@@ -1109,11 +1109,11 @@ program, az üzemeltető személyzet betanítása stb.)</p>
 <h1><a name="5"></a>5. A végtermék jellemzői, biztosított
 szolgáltatások</h1>
 
-<p>Az alábbiakban részletesen ismertetjük a CampusConnect végtermék fő jellemzőit és azokat a szolgáltatásokat, amelyeket az intézmény és a felhasználók számára biztosítunk. A leírás célja, hogy világos képet adjon a funkcionalitásról, a felhasználói szerepkörökről és az üzemeltetési lehetőségekről.</p>
+<p>Az alábbiakban részletesen ismertetjük a Janus végtermék fő jellemzőit és azokat a szolgáltatásokat, amelyeket az intézmény és a felhasználók számára biztosítunk. A leírás célja, hogy világos képet adjon a funkcionalitásról, a felhasználói szerepkörökről és az üzemeltetési lehetőségekről.</p>
 
 
 <h2>Áttekintés</h2>
-<p>A CampusConnect egy Neptun-szerű, webalapú tanulmányi rendszer, amely három fő felhasználói csoportot támogat: hallgatók, oktatók és adminisztrátorok. A rendszer célja az egyetemi ügyintézés digitalizálása, az adminisztráció egyszerűsítése és a tanulmányi folyamatok átláthatóbbá tétele.</p>
+<p>A Janus egy Neptun-szerű, webalapú tanulmányi rendszer, amely három fő felhasználói csoportot támogat: hallgatók, oktatók és adminisztrátorok. A rendszer célja az egyetemi ügyintézés digitalizálása, az adminisztráció egyszerűsítése és a tanulmányi folyamatok átláthatóbbá tétele.</p>
 
 
 <div>
@@ -1154,7 +1154,7 @@ szolgáltatások</h1>
 
 
 <h2>Műszaki részletek és minőségi jellemzők</h2>
-<p>A CampusConnect fejlesztése során különös figyelmet fordítottunk az alábbi minőségi kritériumokra:</p>
+<p>A Janus fejlesztése során különös figyelmet fordítottunk az alábbi minőségi kritériumokra:</p>
 <ul>
 <li><strong>Biztonság:</strong> HTTPS minden kommunikációhoz, titkosított érzékeny adatok, audit naplók és lehetőség kétlépcsős azonosítás bevezetésére.</li>
 <li><strong>Skálázhatóság:</strong> Mikroszerviz-architektúra és horizontális skálázási lehetőség a nagy terhelés kezelésére.</li>
@@ -1165,7 +1165,7 @@ szolgáltatások</h1>
 
 
 <h2>Záró megjegyzés</h2>
-<p>A CampusConnect célja, hogy egy modern, megbízható és testreszabható megoldást nyújtson az egyetemi adminisztráció kezelésére. A fenti funkciók és szolgáltatások lefedik a mindennapi tanulmányi folyamatok igényeit, ugyanakkor a rendszer kialakítása lehetővé teszi az intézményi sajátosságokhoz való rugalmas igazítást.</p>
+<p>A Janus célja, hogy egy modern, megbízható és testreszabható megoldást nyújtson az egyetemi adminisztráció kezelésére. A fenti funkciók és szolgáltatások lefedik a mindennapi tanulmányi folyamatok igényeit, ugyanakkor a rendszer kialakítása lehetővé teszi az intézményi sajátosságokhoz való rugalmas igazítást.</p>
 <p><br>
 <br>
 
